fix X scrolling on iphone

--- a/css/main-page-blocks/header.css
+++ b/css/main-page-blocks/header.css
@@ -150,8 +150,8 @@
         left: 0;
         top: 0;
         opacity: 0;
-        visibility: hidden;
-        z-index: -100;
+        z-index: 100;
+        pointer-events: none;
         background-color: #FFFFFF;
         transition: opacity 0.3s ease-out;
         padding: 30px 0;
@@ -160,9 +160,8 @@
     }
 
     .header__nav-list.open {
-        z-index: 100;
         opacity: 1;
-        visibility: visible;
+        pointer-events: auto;
     }
 
     .header__tel {
